[gd_scene load_steps=6 format=2]

[ext_resource path="res://player/Player.gd" type="Script" id=1]
[ext_resource path="res://states/PlayState.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CapsuleShape2D" id=2]
radius = 16.0
height = 748.0

[sub_resource type="CircleShape2D" id=3]
radius = 25.2982

[node name="PlayState" type="Node2D"]
script = ExtResource( 2 )

[node name="DetectionAreas" type="Node2D" parent="."]

[node name="Platform" type="Node2D" parent="."]
position = Vector2( 512, 304 )

[node name="Pivot" type="StaticBody2D" parent="Platform"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform/Pivot"]
shape = SubResource( 1 )

[node name="Seesaw" type="RigidBody2D" parent="Platform" groups=[
"Floor",
]]
can_sleep = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform/Seesaw"]
rotation = -1.5708
shape = SubResource( 2 )

[node name="PinJoint2D" type="PinJoint2D" parent="Platform"]
node_a = NodePath("../Pivot")
node_b = NodePath("../Seesaw")

[node name="Player" type="RigidBody2D" parent="."]
position = Vector2( 512, 192 )
mode = 2
custom_integrator = true
contacts_reported = 3
contact_monitor = true
can_sleep = false
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[node name="ScoreLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
rect_scale = Vector2( 6, 6 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerLabel" type="Label" parent="."]
margin_top = 80.0
margin_right = 40.0
margin_bottom = 94.0
rect_scale = Vector2( 6, 6 )
text = "0"
